# GigaAM_iln

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  requirements.txt  transcriptions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/gigaam/: __init__.py
backend/prompt/: Promt v3 (Рик).md  Promt_tech.md  Promt_tech_2.md
backend/prompt/test/: OPENAIPrompt_v2.md  Promt v5 (Рик) - Yandex.md  Promt.md  Promts.md
backend/src/: api.py  transcribe.py
backend/src/prompts/: templates.py
doc/: DOCKER.md  FREEZE.md  README.md
frontend/: .dockerignore  .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ModelSelector.jsx  ProtocolPanel.jsx  ThemeToggle.jsx  TranscriptionPanel.jsx  UploadSection.jsx
frontend/src/constants/: config.js
frontend/src/context/: ModelContext.jsx
frontend/src/hooks/: useNotification.js  useProtocol.js  useTheme.js  useTranscription.js
frontend/src/services/: api.js
frontend/src/styles/: index.css  theme-dark.css  variables.css
frontend/src/styles/components/: Layout.css  ModelSelector.css  ProtocolPanel.css  ThemeToggle.css  TranscriptionPanel.css  UploadSection.css
gigaam/: vad_utils.py
prompt/: PROTOCOL.md  Promt v2.md
prompt/test/: Promt v4 (Рик).md
