[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaam"
version = "0.1.0"
description = "GigaAM: A package for audio modeling and ASR."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "GigaChat Team"}]
urls = {Homepage = "https://github.com/salute-developers/GigaAM/"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "numpy",
    "soundfile",
    "librosa",
    "hydra-core==1.3.*",
    "numpy==2.*",
    "omegaconf==2.3.*",
    "onnx==1.19.*",
    "onnxruntime==1.23.*",
    "sentencepiece",
    "torch>=2.5,<2.9",
    "torchaudio>=2.5,<2.9",
    "tqdm",
    "huggingface_hub==1.4.1",
    "pyannote.audio==4.0.3",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
longform = ["torch==2.8.*", "torchaudio==2.8.*", "pyannote.audio==4.0", "torchcodec==0.7", "numba>=0.62"]
tests = ["pytest", "pytest-cov", "scipy", "soundfile", "librosa"]

[tool.setuptools.packages.find]
include = ["gigaam*"]  # только пакет gigaam и его подпакеты
exclude = ["tests*", "assets*", "voice*", "prompt*"]  # явно исключаем